deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bag-store-project-app-deployment
  namespace: kiii
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bagstoreproject-app
  template:
    metadata:
      labels:
        app: bagstoreproject-app
    spec:
      containers:
      - name: bag-store-project-container
        image: majapan/bagstoreproject:latest
        ports:
        - containerPort: 8000
