app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bagstoreproject-app-service
  namespace: kiii
spec:
  selector:
    app: bagstoreproject-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
