service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bag-store-project-app-service
  namespace: kiii
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  selector:
    app: bagstoreproject-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort

#LoadBalancer vs.NodePort
#NodePort because i am working on a local development, without a cloud
#if cloud - LoadBalancer
