ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bag-store-project-ingress
  namespace: kiii
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bag-store-project-app-service
                port:
                  number: 80
